istio-ingressgateway.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2025-01-17T17:25:05Z"
  labels:
    app: istio-ingressgateway
    app.kubernetes.io/instance: istio
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: istio-ingressgateway
    app.kubernetes.io/part-of: istio
    app.kubernetes.io/version: 1.24.2
    helm.sh/chart: istio-ingress-1.24.2
    install.operator.istio.io/owning-resource: unknown
    install.operator.istio.io/owning-resource-namespace: istio-system
    istio: ingressgateway
    istio.io/rev: default
    operator.istio.io/component: IngressGateways
    operator.istio.io/managed: Reconcile
    operator.istio.io/version: 1.24.2
    release: istio
  name: istio-ingressgateway
  namespace: istio-system
  resourceVersion: "33875"
  uid: 9e580ac1-54a6-470c-a729-7bd5dda20a6e
spec:
  clusterIP: 10.110.247.123
  clusterIPs:
  - 10.110.247.123
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: status-port
    nodePort: 32581
    port: 15021
    protocol: TCP
    targetPort: 15021
  - name: http2
    nodePort: 30324
    port: 80
    protocol: TCP
    targetPort: 8080
  - name: https
    nodePort: 30408
    port: 443
    protocol: TCP
    targetPort: 8443
  - name: tcp
    nodePort: 31595
    port: 31400
    protocol: TCP
    targetPort: 31400
  - name: tls
    nodePort: 31825
    port: 15443
    protocol: TCP
    targetPort: 15443
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
